--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HTML Minifier</title>
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
   </head>
+
   <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
-    </nav>
-    <main>
-      <h1>Home page</h1>
-    </main>
+    <h1>HTML Minifier</h1>
+    <div class="container">
+      <textarea
+        id="input"
+        placeholder="Paste your HTML code here..."
+      ></textarea>
+      <div id="output"></div>
+    </div>
+    <button type="button" onclick="minifySVGPaths()">Minify</button>
+
+    <script src="script.js"></script>
   </body>
 </html>
