--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <textarea
         id="input"
         placeholder="Paste your HTML code here..."
+        onchange="minifySVGPaths()"
       ></textarea>
       <div id="output"></div>
     </div>
