--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <textarea
         id="input"
         placeholder="Paste your HTML code here..."
-        onchange="minifySVGPaths()"
+        oninput="minifySVGPaths()"
       ></textarea>
       <div id="output"></div>
     </div>
